--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -61,7 +61,7 @@
                             <ul>
                                 <li>Arrive at Maiquetia Airport. Then take another flight to Canaima camp.</li>
                                 <li>Spend the night and then in the morning take a one-day boat ride to the falls.</li>
-                                <li>Meet with Mazine and she'll take you to yr raft</li>
+                                <li>Meet with Mazine and she'll take you to your raft</li>
                                 <li>Raft Angel Falls and safely descend 800 meters to the bottom.</li>
                                 <li>Continue rafting down Rio Carrao for the next 70 km (1 day) until you get back to
                                     campsite to the hotel.</li>
@@ -92,7 +92,7 @@
                             <ul class="tabletextalign">
                                 <li>beautiful scenary</li>
                                 <li>lavish hotel service</li>
-                                <li>Over 800 metres of shear rafting</li>
+                                <li>Over 800 metres of shear rafting excitement</li>
                             </ul>
                         </td>
                         <td>
@@ -116,7 +116,7 @@
             <h2 class="border">Zambezi River</h2>
             <img class="picture" src="images/crochippo.webp" alt="crocodile river rafting">
             <p>Raft down the beautiful Zambezi River. Kind and loving hippos await you, with cute and cuddly
-                crocodiles. Perfectly safe, these crocs are vegatarians and the hippos can't hurt a fly. m100% safe.</p>
+                crocodiles. Perfectly safe, these crocs are vegatarians and the hippos can't hurt a fly. 100% safe and offical certified by saftey engineers.</p>
             <table>
                 <thead>
                     <tr>
@@ -134,17 +134,16 @@
                         <th scope="col" colspan="2">Finance</th>
                         <td rowspan="4" class="tabletextalign">
                             <ol>
-                                <li>Fly to Kruger Mpumalanga Airport, then take the bus Kruger Eden Lodge</li>
-                                <li>Your guide Newscum will lead outside to Crocodile river with a raft color of
+                                <li>Fly to Kruger Mpumalanga Airport, then take the bus to Kruger Eden Lodge</li>
+                                <li>Your guide Newscum will lead you outside to Crocodile river with a raft color of
                                     your choice</li>
                                 <li>Raft upstream for 80 km by passing the cute crocs, and stay the night at Croc
                                     River Lodge.</li>
                                 <li>Arise at 5pm and raft all day until you get Magude 100 km away, and stay at
                                     Motel Flamingo.</li>
-                                <li>In the morning raft all the way back non-stop Kruger Eden Lodge where they will
+                                <li>In the morning raft all the way back non-stop to Kruger Eden Lodge where they will
                                     give you a free biscut and make your way, by foot (15 km) to the Mpumalanga
-                                    Airport</li>
-                                <li>Repeat for two more days.</li>
+                                    Airport</li>                                
                             </ol>
                         </td>
                     </tr>
@@ -198,7 +197,7 @@
             <img class="picture" src="images/piranha.webp" alt="amazon river rafting">
             <p>Ever rafted the Amazon River. Well this is your chance. It should take you 4 months to raft its
                 approximate length of 6,400 km. We give u a free bottle of water and one sandwich to last you the
-                distance. This food is mainly to feed the piranhas, and if you get hungry, there is free vegetation to
+                distance. This food is mainly to feed the piranhas, and if you get hungry, there is free Amazon vegetation to
                 consume.</p>
             <table>
                 <thead>
@@ -217,10 +216,8 @@
                         <td rowspan="4" class="tabletextalign">
                             <ol>
                                 <li>Travel to Iquitos, Peru and stay at the Amazon Dream Hotel</li>
-                                <li>In the morning walk a few steps to the beginning of the Amazon River. There you
-                                    will find a raft; with a sandwich and free bottle of water.</li>
-                                <li>Raft for about 400 km until you get to your stop at hotel Anaconda in Tabatinga
-                                </li>
+                                <li>In the morning walk a few steps to the beginning of the Amazon River. There you will find a raft and your guide Schumer; with a sandwich and free bottle of water.</li>
+                                <li>Raft for about 400 km until you get to your stop at hotel Anaconda in Tabatinga</li>
                                 <li>Continue Rafting in this order</li>
                                 <li>
                                     <ul class="tabletextalign">
@@ -230,8 +227,7 @@
                                         <li>Hotel Orla (550 km) - Hotel Orla</li>
                                     </ul>
                                 </li>
-                                <li>In the morning take your raft and raft up R. do Canal and then walk to the
-                                    airport Macapa</li>
+                                <li>In the morning take your raft and raft up R. do Canal and then walk to the airport Macapa</li>
                             </ol>
                         </td>
                     </tr>
@@ -306,7 +302,7 @@
                             <ol>
                                 <li>Travel to Leeds and take the bus to the Devonshire Arms Hotel and take the night
                                     to refresh</li>
-                                <li>In the morning travel to Howgill and strat rafting there</li>
+                                <li>In the morning travel to Howgill and meet Pelosi where she will show you your raft</li>
                                 <li>It should take an hour until you get to the strid</li>
                                 <li>As you arrive at the strid, hold breath as you get sucked under the water (be
                                     sure you can hold your breath for 1 minute)</li>
@@ -325,7 +321,7 @@
                                 <li>Airplane cost $2,600</li>
                                 <li>$600 at Devonshire Hotel</li>
                                 <li>Car hire - $240 per day</li>
-                                <li>20% off usually accomodation</li>
+                                <li>20% off the usual accomodation</li>
                                 <li>total cost $9,000</li>
                             </ul>
                         </td>
@@ -341,7 +337,7 @@
                             <ul class="tabletextalign">
                                 <li>One of the beautiful places in Yorkshire - 17th & 19th century enviorment</li>
                                 <li>Extreme underwater rafting</li>
-                                <li>Powerful undercurrent pulls anybody underwater</li>
+                                <li>Powerful undercurrent that pulls anybody underwater</li>
                                 <li>Diving experience a must</li>
                             </ul>
                         </td>
@@ -388,7 +384,7 @@
                         <td rowspan="4" class="tabletextalign">
                             <ol>
                                 <li>Arrive in Spain and stay at the Hotel Vazquez Diaz</li>
-                                <li>Our guide Shiff will take you to the river where you will start rafting.</li>
+                                <li>Our guide Schiff will take you to the river where you will start rafting.</li>
                                 <li>As your continue down the river, make sure you wash your hair, skin and eyes
                                     with highly optimized water enhancing elements which can reverse aging</li>
                                 <li>Once you have made it to La Rabida. Dine at the Pura Huelva restaurant</li>
@@ -421,7 +417,7 @@
                             <ul class="tabletextalign">
                                 <li>The unique color is cause by high levels of iron and heavy metals; a must
                                     enhancing your skin, hair & eyes.</li>
-                                <li>Over 5000 years of ore mining has allowed some microorganisms to thrive</li>
+                                <li>Over 5000 years of ore mining has allowed some microorganisms to thrive, and we are certain humans can survive as well</li>
                                 <li>Beautiful city life in Bar Pappis where you will raft there for breakfast then
                                     take your raft for 400 km to Morocco at Temara and have a free sandwich (water
                                     is not free). </li>
@@ -432,6 +428,7 @@
                                 <li>umbrella</li>
                                 <li>shoes</li>
                                 <li>change of clothes</li>
+                                <li>rubber duck</li>
                             </ul>
                         </td>
                     </tr>
