--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -116,7 +116,7 @@
             <h2 class="border">Zambezi River</h2>
             <img class="picture" src="images/crochippo.webp" alt="crocodile river rafting">
             <p>Raft down the beautiful Zambezi River. Kind and loving hippos await you, with cute and cuddly
-                crocodiles. Perfectly safe, these crocs are vegatarians and the hippos can't hurt a fly. 100% safe and offical certified by saftey engineers.</p>
+                crocodiles. Perfectly safe, these crocs are vegatarians and the hippos can't hurt a fly. 100% safe and offically certified by authorized saftey engineers.</p>
             <table>
                 <thead>
                     <tr>
@@ -255,7 +255,7 @@
                             <ul class="tabletextalign">
                                 <li>4 months of rafting</li>
                                 <li>helpful cartels</li>
-                                <li>change phone via electric eel</li>
+                                <li>charge phone via electric eel</li>
                             </ul>
                         </td>
 
