--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -304,12 +304,12 @@
                                     to refresh</li>
                                 <li>In the morning travel to Howgill and meet Pelosi where she will show you your raft</li>
                                 <li>It should take an hour until you get to the strid</li>
-                                <li>As you arrive at the strid, hold breath as you get sucked under the water (be
+                                <li>As you arrive at the strid, hold your breath as you get sucked under the water (be
                                     sure you can hold your breath for 1 minute)</li>
                                 <li>Raft the underwater currents, which has been estimated to be up to 70 metres
                                     deep</li>
                                 <li>Then reappear safely 10 meters downstream</li>
-                                <li>Continue on until you get to Boton Priory to see the sights</li>
+                                <li>Continue on until you get to Bolton Priory to see the sights</li>
                                 <li>Then continue on until you raft back to Devonshire Hotel</li>
                             </ol>
                         </td>
