--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -281,7 +281,7 @@
             <h2 class="border">Bolton Strid</h2>
             <img class="picture" src="images/boltonstrid.jpg" alt="bolton stride rafting">
             <p>Rafting the Bolton Strid sucks you and the raft underwater, where whirlpools and vorticies thrash you
-                against sides and you are squeezed through a variety of hidden cavens for an exhilirating ride.
+                against the river walls and you are squeezed through a variety of hidden cavens for an exhilirating ride.
                 Eventually, you reappear safely about 10 metres down stream.</p>
             <table>
                 <thead>
