--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>White Water Rafting About Us and Founder Joe Biden</title>
-    <meta name="description" content="We are a highly intelligent group of rafting individuals and we would love you to find out more about our intriguing history. Joe Biden, founder and president will personally show you our offerings. ">
+    <meta name="description"
+        content="We are a highly intelligent group of rafting individuals and we would love you to find out more about our intriguing history. Joe Biden, founder and president will personally show you our offerings. ">
     <meta name="author" content="Basky Keefe">
 
     <link rel="stylesheet" href="styles/rafting.css">
@@ -61,30 +62,30 @@
         </section>
 
         <section class="await">
-            <h2 >Adventure Awaits You!</h2>
+            <h2>Adventure Awaits You!</h2>
             <figure>
                 <img src="images/rafting-1.webp" alt="rafting-image-1">
-                <figcaption>Kwagunt</figcaption>
+                <figcaption>Angel Falls</figcaption>
             </figure>
 
             <figure>
                 <img src="images/rafting-2.webp" alt="rafting-image-2">
-                <figcaption>Tuna Creek</figcaption>
+                <figcaption>Crocodile River</figcaption>
             </figure>
 
             <figure>
                 <img src="images/rafting-3.webp" alt="rafting-image-3">
-                <figcaption>Deubendorff</figcaption>
+                <figcaption>Amazon River</figcaption>
             </figure>
 
             <figure>
                 <img src="images/rafting-4.webp" alt="rafting-image-4">
-                <figcaption>Willie’s Necktie</figcaption>
+                <figcaption>Bolton Strid</figcaption>
             </figure>
 
             <figure>
                 <img src="images/rafting-5.webp" alt="rafting-image-5">
-                <figcaption>Aratiatia</figcaption>
+                <figcaption>Rio Tinto</figcaption>
             </figure>
         </section>
     </main>
